--- a/555-crawler/pom.xml
+++ b/555-crawler/pom.xml
@@ -22,6 +22,17 @@
         <url>file://${project.basedir}/maven-repository</url>
     </repository>
 </repositories>
+<dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-bom</artifactId>
+      <version>1.11.327</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+  </dependencies>
+</dependencyManagement>
     <dependencies>
     <!--
 <dependency>
@@ -31,10 +42,21 @@
 </dependency>
 -->
 <!-- https://mvnrepository.com/artifact/com.sparkjava/spark-core -->
+         <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>rds</artifactId>
+            <version>2.13.53</version>
+        </dependency>
 <dependency>
     <groupId>com.sparkjava</groupId>
     <artifactId>spark-core</artifactId>
     <version>2.7.2</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.2.19</version>
 </dependency>
 
 
