--- a/555-crawler/pom.xml
+++ b/555-crawler/pom.xml
@@ -184,8 +184,8 @@
 				<configuration>
 					<mainClass>edu.upenn.cis.cis455.crawler.master.MasterServer</mainClass>
 					<arguments>
-					    <argument>https://kevnchen.com/</argument>
-					    <argument>rds-path</argument>
+					    <argument>https://www.cis.upenn.edu/</argument>
+					    <argument>master-storage</argument>
 						<argument>1</argument>
 						<argument>100</argument>
 						<argument>45555</argument>
