--- a/555-indexer/pom.xml
+++ b/555-indexer/pom.xml
@@ -71,8 +71,14 @@
 		    <artifactId>jsoup</artifactId>
 		    <version>1.13.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.github.rholder</groupId>
+		    <artifactId>snowball-stemmer</artifactId>
+		    <version>1.3.0.581.1</version>
+		</dependency>
+		
     </dependencies>
-
+	
     <build>
         <plugins>
             <plugin>
@@ -90,12 +96,34 @@
                 </configuration>
             </plugin>
             <plugin>
+		        <groupId>com.googlecode.maven-download-plugin</groupId>
+		        <artifactId>download-maven-plugin</artifactId>
+		        <version>1.6.3</version>
+		        <executions>
+		        	<execution>
+			            <id>get-stopwords</id>
+			            <phase>process-resources</phase>
+			            <goals>
+			              <goal>wget</goal>
+			            </goals>
+				        <configuration>
+			              <uri>https://gist.githubusercontent.com/carloschavez9/63414d83f68b09b4ef2926cc20ad641c/raw/7557ef316b35207b4524068e32e4705e2c517c2c/nlp_en_stop_words.txt</uri>
+			              <outputFileName>nlp_en_stop_words.txt</outputFileName>
+			              <outputDirectory>${project.basedir}/src/main/resources</outputDirectory>
+			            </configuration>
+		        	</execution>
+		        </executions>
+		    </plugin>
+            
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
-                <executions><execution>
-                    <goals><goal>java</goal></goals>
-                </execution></executions>
+                <executions>
+                	<execution>
+                    	<goals><goal>java</goal></goals>
+                	</execution>
+                </executions>
                 <configuration>
                     <mainClass>edu.upenn.cis.cis455.invertedindex.Indexer</mainClass>
                     <arguments>
