--- a/555-crawler/pom.xml
+++ b/555-crawler/pom.xml
@@ -184,11 +184,15 @@
 				<configuration>
 					<mainClass>edu.upenn.cis.cis455.crawler.master.MasterServer</mainClass>
 					<arguments>
-					    <argument>https://www.cis.upenn.edu/</argument>
 					    <argument>master-storage</argument>
 						<argument>1</argument>
 						<argument>2000</argument>
 						<argument>45555</argument>
+						<argument>https://www.cis.upenn.edu/</argument>
+						<argument>https://en.wikipedia.org/wiki/Kevin_Durant</argument>
+						<argument>https://www.foxnews.com/</argument>
+						<argument>https://www.merriam-webster.com/</argument>
+						<argument>https://www.allrecipes.com/</argument>
 					</arguments>
 				</configuration>
 			</execution>
