--- a/555-indexer/pom.xml
+++ b/555-indexer/pom.xml
@@ -76,6 +76,14 @@
 		    <artifactId>snowball-stemmer</artifactId>
 		    <version>1.3.0.581.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib -->
+		<dependency>
+		    <groupId>org.apache.spark</groupId>
+		    <artifactId>spark-mllib_2.12</artifactId>
+		    <version>3.1.1</version>
+		    <scope>provided</scope>
+		</dependency>
+		
 		
     </dependencies>
 	
