--- a/555-crawler/pom.xml
+++ b/555-crawler/pom.xml
@@ -186,13 +186,13 @@
 					<arguments>
 					    <argument>master-storage</argument>
 						<argument>1</argument>
-						<argument>200000</argument>
+						<argument>2000000</argument>
 						<argument>45555</argument>
 						<argument>https://www.cis.upenn.edu/</argument>
 						<argument>https://en.wikipedia.org/wiki/Kevin_Durant</argument>
 						<argument>https://www.foxnews.com/</argument>
-						<argument>https://www.merriam-webster.com/</argument>
-						<argument>https://www.allrecipes.com/</argument>
+						<argument>https://www.imdb.com/news/movie/</argument>
+						<argument>https://www.linkedin.com/in/kevc528/</argument>
 					</arguments>
 				</configuration>
 			</execution>
