--- a/555-indexer/pom.xml
+++ b/555-indexer/pom.xml
@@ -37,22 +37,6 @@
             <version>4.12</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.11.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.11.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.11.2</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.12</artifactId>
             <version>3.1.1</version>
@@ -79,7 +63,36 @@
     </dependencies>
 	
     <build>
+    	<resources>
+	        <resource>
+	        	<directory>src/main/resources</directory>
+	        		<includes>
+		          		<include>nlp_en_stop_words.txt</include>
+	        		</includes>
+	      	</resource>
+	    </resources>
         <plugins>
+        	<plugin>
+		        <artifactId>maven-assembly-plugin</artifactId>
+		        <executions>
+		            <execution>
+		            	<phase>package</phase>
+		            	<goals>
+		              		<goal>single</goal>
+		            	</goals>
+		          	</execution>
+		        </executions>
+		        <configuration>
+		        	<archive>
+			            <manifest>
+			            	<mainClass>edu.upenn.cis.cis455.invertedindex.Indexer</mainClass>
+			            </manifest>
+			        </archive>
+		            <descriptorRefs>
+		            	<descriptorRef>jar-with-dependencies</descriptorRef>
+		            </descriptorRefs>
+		        </configuration>
+	        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -113,7 +126,6 @@
 		        	</execution>
 		        </executions>
 		    </plugin>
-            
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
