changed linkedin to nsf

--- a/555-crawler/pom.xml
+++ b/555-crawler/pom.xml
@@ -192,7 +192,7 @@
 						<argument>https://en.wikipedia.org/wiki/Kevin_Durant</argument>
 						<argument>https://www.foxnews.com/</argument>
 						<argument>https://www.imdb.com/news/movie/</argument>
-						<argument>https://www.linkedin.com/in/kevc528/</argument>
+						<argument>https://nsf.gov/publications/</argument>
 					</arguments>
 				</configuration>
 			</execution>
