--- a/search-server/pom.xml
+++ b/search-server/pom.xml
@@ -110,24 +110,37 @@
     <artifactId>jsoup</artifactId>
     <version>1.13.1</version>
 </dependency>
+       		<dependency>
+		    <groupId>com.github.rholder</groupId>
+		    <artifactId>snowball-stemmer</artifactId>
+		    <version>1.3.0.581.1</version>
+		</dependency>
        
     </dependencies>
     <build>
     	
-        <plugins>
+        <plugins>      
     <plugin>
-      <artifactId>maven-assembly-plugin</artifactId>
-      <configuration>
-        <archive>
-          <manifest>
-            <mainClass>edu.upenn.cis.cis455.WebServer</mainClass>
-          </manifest>
-        </archive>
-        <descriptorRefs>
-          <descriptorRef>jar-with-dependencies</descriptorRef>
-        </descriptorRefs>
-      </configuration>
-    </plugin>        
+		        <artifactId>maven-assembly-plugin</artifactId>
+		        <executions>
+		            <execution>
+		            	<phase>package</phase>
+		            	<goals>
+		              		<goal>single</goal>
+		            	</goals>
+		          	</execution>
+		        </executions>
+		        <configuration>
+		        	<archive>
+			            <manifest>
+			            	<mainClass>edu.upenn.cis.cis455.CreateTitle</mainClass>
+			            </manifest>
+			        </archive>
+		            <descriptorRefs>
+		            	<descriptorRef>jar-with-dependencies</descriptorRef>
+		            </descriptorRefs>
+		        </configuration>
+	        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
