--- a/555-crawler/pom.xml
+++ b/555-crawler/pom.xml
@@ -225,6 +225,20 @@
 					</arguments>
 				</configuration>
 			</execution>
+              <execution>
+				<id>worker3</id>
+				<goals>
+					<goal>java</goal>
+				</goals>
+				<configuration>
+					<mainClass>edu.upenn.cis.cis455.crawler.worker.WorkerServer</mainClass>
+					<arguments>
+						<argument>8003</argument>
+						<argument>http://ec2-35-170-64-22.compute-1.amazonaws.com:45555</argument>
+						<argument>storage/node3</argument>
+					</arguments>
+				</configuration>
+			</execution>
               </executions>
               <configuration>
                 <mainClass>edu.upenn.cis.cis455.crawler.WebInterface</mainClass>
