--- a/555-indexer/pom.xml
+++ b/555-indexer/pom.xml
@@ -60,6 +60,11 @@
 		    <artifactId>snowball-stemmer</artifactId>
 		    <version>1.3.0.581.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>it.unimi.dsi</groupId>
+		    <artifactId>fastutil</artifactId>
+		    <version>8.5.2</version>
+		</dependency>
     </dependencies>
 	
     <build>
