--- a/search-server/pom.xml
+++ b/search-server/pom.xml
@@ -106,14 +106,19 @@
             <version>42.2.19</version>
         </dependency>
        <dependency>
-    <groupId>org.jsoup</groupId>
-    <artifactId>jsoup</artifactId>
-    <version>1.13.1</version>
-</dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.13.1</version>
+		</dependency>
        		<dependency>
 		    <groupId>com.github.rholder</groupId>
 		    <artifactId>snowball-stemmer</artifactId>
 		    <version>1.3.0.581.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>1.9</version>
 		</dependency>
        
     </dependencies>
